--- a/ansible/playbooks/sap-hana-preconfigure.yaml
+++ b/ansible/playbooks/sap-hana-preconfigure.yaml
@@ -54,6 +54,12 @@
       retries: 3
       delay: 60
 
+    - name: Ensure ClusterTools2 is installed
+      community.general.zypper:
+        name: ClusterTools2
+        state: present
+      when: cluster_node | bool
+
     - name: Configure sapconf based systems
       ansible.builtin.include_tasks: ./tasks/sapconf.yaml
       when: use_sapconf | bool
